# Cache

./: CMakeLists.txt  README.md
include/: LFUCache.hpp  LFUcache.hpp  LRUCache.hpp  LRUcache.hpp  PerfectCache.hpp
src/: CMakeLists.txt  GetPage.cpp  LFUCache.cpp  LRUCache.cpp  Main.cpp  PerfectCache.cpp
tests/: CheckTests.py  CompareCaches.py  GenerateTests.py  GetAnsTests.py  RunTests.sh
tests/getAns/: GetAnsTestsLFU.py  GetAnsTestsLRU.py  GetAnsTestsPerfect.py
tests/runTests/: LFU.sh  LRU.sh  Perfect.sh
tests/testsFiles/: 01.txt  test02.txt  test06.txt  test08.txt
tests/testsFiles/Answer/: RatioCaches.txt
tests/testsFiles/LFU/: 04.txt  05.txt  07.txt  09.txt
tests/testsFiles/LRU/: 03.txt  10.txt
